:bulb: chore: add exercise 6 and 8

--- a/desafio.ipynb
+++ b/desafio.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Desafio - Encontrar algoritmo que possui dois laços, porém não é n2\n",
+    "# Desafio - Encontrar algoritmo que possui tres laços, porém não é n3\n",
     "\n",
     "import math\n",
     "\n",
