--- a/exercicio_6.ipynb
+++ b/exercicio_6.ipynb
@@ -8,17 +8,16 @@
    "source": [
     "# qual a complexidade do algoritmo\n",
     "\n",
-    "def function(n):\n",
-    "    for i in range(n):\n",
-    "        print(i)\n",
-    "        for j in range(n):\n",
-    "            for k in range(n):\n",
-    "                pass\n",
-    "            for l in range(n):\n",
-    "                for m in range(n):\n",
-    "                    for o in range(n):\n",
-    "                        pass\n",
-    "\n"
+    "def sum(arr: list, s: int):\n",
+    "    for i in range(len(arr)):\n",
+    "        for j in range(len(arr)):\n",
+    "            if i == j: continue\n",
+    "            if (arr[i] + arr[j]) == s:\n",
+    "                return True\n",
+    "    return False            \n",
+    "\n",
+    "assert sum([1, 2, 3], 6) == False\n",
+    "assert sum([1, 2, 3, 4], 5) == True"
    ]
   },
   {
@@ -26,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Complexity: $n^6 + n$"
+    "Complexity: $n^2$"
    ]
   }
  ],
