:bulb: chore: update list 1

--- a/lista1/exercicio_6.ipynb
+++ b/lista1/exercicio_6.ipynb
@@ -6,15 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def duplicate(string: str):\n",
-    "    for i in range(len(string)):\n",
-    "        for j in range(i + 1, len(string)):\n",
-    "            if string[i] == string[j]:\n",
-    "                return True\n",
-    "    return False\n",
+    "# qual a complexidade do algoritmo\n",
     "\n",
-    "assert duplicate(\"ABCDE\") == False\n",
-    "assert duplicate(\"ABCDA\") == True"
+    "def sum(arr: list, s: int):\n",
+    "    for i in range(len(arr)):\n",
+    "        for j in range(len(arr)):\n",
+    "            if i == j: continue\n",
+    "            if (arr[i] + arr[j]) == s:\n",
+    "                return True\n",
+    "    return False            \n",
+    "\n",
+    "assert sum([1, 2, 3], 6) == False\n",
+    "assert sum([1, 2, 3, 4], 5) == True"
    ]
   },
   {
@@ -22,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Complexity: $n^2$"
+    "Complexity: $O(n^2)$"
    ]
   }
  ],
