--- a/lista1/exercicio_1.ipynb
+++ b/lista1/exercicio_1.ipynb
@@ -2,30 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# qual a complexidade do algoritmo\n",
-    "\n",
-    "def sum(arr: list, s: int):\n",
-    "    for i in range(len(arr)):\n",
-    "        for j in range(len(arr)):\n",
-    "            if i == j: continue\n",
-    "            if (arr[i] + arr[j]) == s:\n",
-    "                return True\n",
-    "    return False            \n",
-    "\n",
-    "assert sum([1, 2, 3], 6) == False\n",
-    "assert sum([1, 2, 3, 4], 5) == True"
+    "def search(arr: list, value: int, idx=0):\n",
+    "    if idx == len(arr):\n",
+    "        return None\n",
+    "    if arr[idx] == value:\n",
+    "        return idx\n",
+    "    idx += 1\n",
+    "    return search(arr, value, idx)"
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [5, 3, 2, 7, 1]\n",
+    "assert search(arr, 3) == 1\n",
+    "assert search(arr, 1) == 4\n",
+    "assert search(arr, 4) == None"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Complexity: $n^2$"
+    "Linear Search time complexity is $O(n)$"
    ]
   }
  ],
@@ -45,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
