--- a/lista1/exercicio_3.ipynb
+++ b/lista1/exercicio_3.ipynb
@@ -2,23 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# qual a complexidade do algoritmo\n",
+    "def sort(arr: list):\n",
+    "    for i in range(len(arr)):\n",
+    "        smaller = arr[i]\n",
+    "        index = i\n",
+    "        for j in range(i + 1, len(arr)):\n",
+    "            if smaller > arr[j]:\n",
+    "                smaller = arr[j]\n",
+    "                index = j\n",
+    "        aux = arr[i]\n",
+    "        arr[i] = smaller\n",
+    "        arr[index] = aux\n",
+    "    return arr\n",
     "\n",
-    "def function(n):\n",
-    "    for i in range(n):\n",
-    "        print(i)\n",
-    "        for j in range(n):\n",
-    "            for k in range(n):\n",
-    "                pass\n",
-    "            for l in range(n):\n",
-    "                for m in range(n):\n",
-    "                    for o in range(n):\n",
-    "                        pass\n",
-    "\n"
+    "assert sort([2, 1, 5, 3])[0] == 1\n",
+    "assert sort([5, 1, 4, 3])[1] == 3\n",
+    "assert sort([-1, 5, -2, 4])[0] == -2"
    ]
   },
   {
@@ -26,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Complexity: $n^6 + n$"
+    "Complexity: $O(n^2)$"
    ]
   }
  ],
