--- a/lista1/exercicio_4.ipynb
+++ b/lista1/exercicio_4.ipynb
@@ -2,26 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sort(arr: list):\n",
-    "    for i in range(len(arr)):\n",
-    "        smaller = arr[i]\n",
-    "        index = i\n",
-    "        for j in range(i + 1, len(arr)):\n",
-    "            if smaller > arr[j]:\n",
-    "                smaller = arr[j]\n",
-    "                index = j\n",
-    "        aux = arr[i]\n",
-    "        arr[i] = smaller\n",
-    "        arr[index] = aux\n",
-    "    return arr\n",
+    "def duplicate(string: str):\n",
+    "    for i in range(len(string)):\n",
+    "        for j in range(i + 1, len(string)):\n",
+    "            if string[i] == string[j]:\n",
+    "                return True\n",
+    "    return False\n",
     "\n",
-    "assert sort([2, 1, 5, 3])[0] == 1\n",
-    "assert sort([5, 1, 4, 3])[1] == 3\n",
-    "assert sort([-1, 5, -2, 4])[0] == -2"
+    "assert duplicate(\"ABCDE\") == False\n",
+    "assert duplicate(\"ABCDA\") == True"
    ]
   },
   {
@@ -29,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Complexity: $n^2$"
+    "Complexity: $O(n^2)$"
    ]
   }
  ],
