--- a/lista1/exercicio_5.ipynb
+++ b/lista1/exercicio_5.ipynb
@@ -2,31 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def search(arr: list, value: int, idx=0):\n",
-    "    if idx == len(arr):\n",
-    "        return None\n",
-    "    if arr[idx] == value:\n",
-    "        return idx\n",
-    "    idx += 1\n",
-    "    return search(arr, value, idx)"
+    "# qual a complexidade do algoritmo\n",
+    "\n",
+    "def function(n):\n",
+    "    for i in range(n):\n",
+    "        pass # O(1)\n",
+    "        for j in range(n):\n",
+    "            for _ in range(n): #O(n)\n",
+    "                pass\n",
+    "            for _ in range(n):\n",
+    "                for _ in range(n): # O(n^2)\n",
+    "                    for _ in range(n):\n",
+    "                        pass\n",
+    "                            \n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "arr = [5, 3, 2, 7, 1]\n",
-    "assert search(arr, 3) == 1\n",
-    "assert search(arr, 1) == 4\n",
-    "assert search(arr, 4) == None\n",
-    "\n",
-    "## Linear Search increases based on the list size, so we have a notation O(n)\n"
+    "Complexity: $O(n^6)$"
    ]
   }
  ],
