--- a/lista2/exercicio_1.ipynb
+++ b/lista2/exercicio_1.ipynb
@@ -2,15 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = [1997] # birth\n",
+    "d = [2023] # death\n",
+    "\n",
+    "d[0] - b[0]\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "machinelearning",
    "language": "python",
    "name": "python3"
   },
@@ -24,7 +40,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
