:sparkles: feat: update with list 2

--- a/lista2/exercicio_1.ipynb
+++ b/lista2/exercicio_1.ipynb
@@ -2,25 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "b = [1997] # birth\n",
-    "d = [2023] # death\n",
+    "import math\n",
     "\n",
-    "d[0] - b[0]\n"
+    "def calc(B: list, D: list):\n",
+    "    md = 0\n",
+    "    mb = math.inf\n",
+    "    \n",
+    "    total = -1\n",
+    "    year = 0\n",
+    "    \n",
+    "    for i in range(len(B)): # n\n",
+    "        if D[i] > md:\n",
+    "            md = D[i]\n",
+    "        if B[i] < mb:\n",
+    "            mb = B[i]\n",
+    "\n",
+    "    for j in range(mb, md): #n^2\n",
+    "        alive = 0\n",
+    "        for i in range(len(B)):\n",
+    "            if j >= B[i] and j <= D[i]:\n",
+    "                alive += 1\n",
+    "        \n",
+    "        if total == -1 or alive > total:\n",
+    "            print(j, alive)\n",
+    "            total = alive\n",
+    "            year = j\n",
+    "    return year\n",
+    "    \n",
+    "assert calc([1993, 2000], [1999, 2010]) == 1993\n",
+    "assert calc([1950, 1960, 1970], [1961, 1971, 1981]) == 1960"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Complexity : $O(n^2)$"
    ]
   }
  ],
