--- a/lista1/exercicio_5.ipynb
+++ b/lista1/exercicio_5.ipynb
@@ -9,18 +9,33 @@
     "# qual a complexidade do algoritmo\n",
     "\n",
     "def function(n):\n",
-    "    for i in range(n):\n",
+    "    for i in range(n): # O(n)\n",
     "        pass # O(1)\n",
-    "        for j in range(n):\n",
-    "            for _ in range(n): #O(n)\n",
-    "                pass\n",
-    "            for _ in range(n):\n",
+    "        for j in range(n): # O(n)\n",
+    "            for _ in range(n): # O(n)\n",
+    "                pass \n",
+    "            for _ in range(n): # O(n)\n",
     "                for _ in range(n): # O(n^2)\n",
-    "                    for _ in range(n):\n",
+    "                    for _ in range(n): \n",
     "                        pass\n",
     "                            \n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ n * (1 + n * (n + n * (n^2))) $$\n",
+    "\n",
+    "$$ n + n^2 * (n + n * (n^2)) $$\n",
+    "\n",
+    "$$ n + n^3 + n^3 *(n^2) $$ \n",
+    "\n",
+    "$$ n + n^3 + n^5 $$\n",
+    "\n",
+    "$$ O(n^5) $$"
    ]
   },
   {
