:sparkles: feat: add trabalho

--- a/lista1/exercicio_1.ipynb
+++ b/lista1/exercicio_1.ipynb
@@ -31,7 +31,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Linear Search time complexity is $O(n)$"
+    "Melhor caso: $O(1)$\n",
+    "\n",
+    "Pior caso: $O(n)$"
    ]
   }
  ],
