:bulb: chore: add lista 3

--- a/lista3/exercicio_2.ipynb
+++ b/lista3/exercicio_2.ipynb
@@ -7,6 +7,7 @@
     "<p>\n",
     "<img src=\"./images/exercicio_2_diagrama.png\" alt=\"Alternative text\" width=\"100%\" />\n",
     "<img src=\"./images/exercicio_2_tabela.png\" alt=\"Alternative text\" width=\"100%\" />\n",
+    "<img src=\"./images/exercicio_2_tabela_guloso.png\" alt=\"Alternative text\" width=\"100%\" />\n",
     "</p>"
    ]
   }
