--- a/lista3/exercicio_4.ipynb
+++ b/lista3/exercicio_4.ipynb
@@ -37,7 +37,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O algoritmo escolhe a primeira cor disponivel para atribuir ao vertice sem nenhuma comparacao aos verticies adjacentes."
+    "A escolha gulosa acontece dentro do segundo ***for***, onde o algoritmo sempre escolhe a primeira cor disponivel para atribuir a vertice. Olhando o diagrama abaixo e possivel perceber que mesmo com um ciclo ainda seriam utilizados apenas 2 cores. Em caso de 3 ou mais arestas em um mesmo vertice poderia haver necessidade de mais cores.\n",
+    "<p>\n",
+    "<img src=\"./images/exercicio_4_diagrama.png\" alt=\"Alternative text\" width=\"50%\" />\n",
+    "</p>"
    ]
   }
  ],
