--- a/lista3/exercicio_5.ipynb
+++ b/lista3/exercicio_5.ipynb
@@ -2,72 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "events = [ \n",
-    "    {\"name\": \"A\", \"start\": 1, \"end\": 3 },\n",
-    "    {\"name\": \"B\", \"start\": 2, \"end\": 5 },\n",
-    "    {\"name\": \"C\", \"start\": 3, \"end\": 6 },\n",
-    "    {\"name\": \"D\", \"start\": 6, \"end\": 8 },\n",
-    "    {\"name\": \"E\", \"start\": 4, \"end\": 6 },\n",
-    "]\n",
-    "\n",
-    "def scheduling(events: list[dict]):\n",
-    "    min_value = float('inf')\n",
-    "    event_index = 0\n",
-    "\n",
-    "    schedule = []\n",
-    "\n",
-    "    # seleciona o evento que termina primeiro\n",
-    "    for i in range(len(events)):\n",
-    "        if events[i][\"end\"] < min_value:\n",
-    "            min_value = events[i][\"end\"]\n",
-    "            event_index = i\n",
-    "\n",
-    "    event = events.pop(event_index)\n",
-    "    schedule.append(event)\n",
-    "\n",
-    "    while True:\n",
-    "        min_value = float('inf')\n",
-    "        # seleciona evento que comeca apos o evento selecionado\n",
-    "        for i in range(len(events)):\n",
-    "                if events[i][\"start\"] >= event[\"end\"]:\n",
-    "                    if events[i][\"start\"] < min_value:\n",
-    "                        min_value = events[i][\"start\"]\n",
-    "                        event_index = i\n",
-    "\n",
-    "        if min_value == float('inf'):\n",
-    "             break\n",
-    "        \n",
-    "        # adiciona o evento a lista\n",
-    "        event = events.pop(event_index)\n",
-    "        schedule.append(event)\n",
-    "\n",
-    "    return schedule\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'A', 'start': 1, 'end': 3},\n",
-       " {'name': 'C', 'start': 3, 'end': 6},\n",
-       " {'name': 'D', 'start': 6, 'end': 8}]"
+       "[2, 5, 1]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scheduling(events) # Evento A, C e D"
+    "atividades = [2, 3, 5, 1, 4]\n",
+    "inicio = [0, 1, 3, 4, 1]\n",
+    "fim =    [2, 3, 4, 6, 6]\n",
+    "\n",
+    "def scheduling_aula(atividades: list, inicio: list, fim: list):\n",
+    "    n = len(atividades)\n",
+    "    selecao = []\n",
+    "    selecao.append(atividades[0])\n",
+    "\n",
+    "    k = 0\n",
+    "\n",
+    "    for i in range(1, n):\n",
+    "        if inicio[i] >= fim[k]:\n",
+    "            selecao.append(atividades[i])\n",
+    "            k = 1\n",
+    "    return selecao\n",
+    "\n",
+    "scheduling_aula(atividades, inicio, fim)\n"
    ]
   }
  ],
